Gramatyka/KonturParser.py
# Generated from Kontur.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class KonturParser ( Parser ):

    grammarFileName = "Kontur.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'string'", "'int'", "'float'", "'bool'", 
                     "'matrix'", "'void'", "'true'", "'false'", "'='", "'+'", 
                     "'-'", "'*'", "'/'", "'%'", "'''", "'~'", "'++'", "'--'", 
                     "'+='", "'-='", "'*='", "'/='", "'=='", "'!='", "'<'", 
                     "'<='", "'>'", "'>='", "'||'", "'&&'", "'!'", "'('", 
                     "')'", "'['", "']'", "'{'", "'}'", "';'", "','", "'if'", 
                     "'else'", "'elif'", "'for'", "'while'", "'continue'", 
                     "'break'", "'func'", "'display'", "'input'", "'return'", 
                     "'plot'", "'pow'", "'sin'", "'cos'", "'tan'", "'ctan'" ]

    symbolicNames = [ "<INVALID>", "TYPE_STRING", "TYPE_INT", "TYPE_FLOAT", 
                      "TYPE_BOOL", "TYPE_MATRIX", "TYPE_VOID", "TRUE_VALUE", 
                      "FALSE_VALUE", "ASSIGN", "PLUS", "MINUS", "MULTIPLY", 
                      "DIVIDE", "MODULO", "TRANSPOSITION", "INVERT_MATRIX", 
                      "INCREMENT", "DECREMENT", "ADD_TO", "SUBTRACT_FROM", 
                      "TIMES", "DIVIDE_FROM", "EQUAL", "NOT_EQUAL", "LESS_THAN", 
                      "LESS_EQUAL", "GREATER_THAN", "GREATER_EQUAL", "OR", 
                      "AND", "NOT", "LEFT_PAREN", "RIGHT_PAREN", "LEFT_BRACKET", 
                      "RIGHT_BRACKET", "LEFT_BRACE", "RIGHT_BRACE", "SEMICOLON", 
                      "COMMA", "IF_INSTR", "ELSE_INSTR", "ELIF_INSTR", "FOR_INSTR", 
                      "WHILE_INSTR", "CONTINUE_INSTR", "BREAK_INSTR", "FUNC_INSTR", 
                      "DISPLAY_INSTR", "INPUT_INSTR", "RETURN_INSTR", "PLOT_INSTR", 
                      "POWER_FUNC", "SIN_FUNC", "COS_FUNC", "TAN_FUNC", 
                      "CTAN_FUNC", "COMMENT", "WHITE_SPACE", "NUMBER", "STRING", 
                      "IDENTIFIER" ]

    RULE_program = 0
    RULE_statement = 1
    RULE_loopStatements = 2
    RULE_block = 3
    RULE_assignment = 4
    RULE_expression = 5
    RULE_indexedVar = 6
    RULE_indexList = 7
    RULE_matrixExpression = 8
    RULE_matrixAtom = 9
    RULE_matrixConstruction = 10
    RULE_row = 11
    RULE_value = 12
    RULE_stringExpression = 13
    RULE_funcCall = 14
    RULE_builtInFunctions = 15
    RULE_boolExpression = 16
    RULE_comparisonOperator = 17
    RULE_funcDecl = 18
    RULE_parameters = 19
    RULE_returnDecl = 20
    RULE_numExpression = 21
    RULE_term = 22
    RULE_factor = 23
    RULE_typeName = 24
    RULE_operation = 25
    RULE_reassignment = 26
    RULE_ifStatement = 27
    RULE_loopIfStatement = 28
    RULE_loopStatement = 29
    RULE_forLoop = 30
    RULE_whileLoop = 31
    RULE_displayDecl = 32
    RULE_plotDecl = 33

    ruleNames =  [ "program", "statement", "loopStatements", "block", "assignment", 
                   "expression", "indexedVar", "indexList", "matrixExpression", 
                   "matrixAtom", "matrixConstruction", "row", "value", "stringExpression", 
                   "funcCall", "builtInFunctions", "boolExpression", "comparisonOperator", 
                   "funcDecl", "parameters", "returnDecl", "numExpression", 
                   "term", "factor", "typeName", "operation", "reassignment", 
                   "ifStatement", "loopIfStatement", "loopStatement", "forLoop", 
                   "whileLoop", "displayDecl", "plotDecl" ]

    EOF = Token.EOF
    TYPE_STRING=1
    TYPE_INT=2
    TYPE_FLOAT=3
    TYPE_BOOL=4
    TYPE_MATRIX=5
    TYPE_VOID=6
    TRUE_VALUE=7
    FALSE_VALUE=8
    ASSIGN=9
    PLUS=10
    MINUS=11
    MULTIPLY=12
    DIVIDE=13
    MODULO=14
    TRANSPOSITION=15
    INVERT_MATRIX=16
    INCREMENT=17
    DECREMENT=18
    ADD_TO=19
    SUBTRACT_FROM=20
    TIMES=21
    DIVIDE_FROM=22
    EQUAL=23
    NOT_EQUAL=24
    LESS_THAN=25
    LESS_EQUAL=26
    GREATER_THAN=27
    GREATER_EQUAL=28
    OR=29
    AND=30
    NOT=31
    LEFT_PAREN=32
    RIGHT_PAREN=33
    LEFT_BRACKET=34
    RIGHT_BRACKET=35
    LEFT_BRACE=36
    RIGHT_BRACE=37
    SEMICOLON=38
    COMMA=39
    IF_INSTR=40
    ELSE_INSTR=41
    ELIF_INSTR=42
    FOR_INSTR=43
    WHILE_INSTR=44
    CONTINUE_INSTR=45
    BREAK_INSTR=46
    FUNC_INSTR=47
    DISPLAY_INSTR=48
    INPUT_INSTR=49
    RETURN_INSTR=50
    PLOT_INSTR=51
    POWER_FUNC=52
    SIN_FUNC=53
    COS_FUNC=54
    TAN_FUNC=55
    CTAN_FUNC=56
    COMMENT=57
    WHITE_SPACE=58
    NUMBER=59
    STRING=60
    IDENTIFIER=61

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(KonturParser.EOF, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(KonturParser.StatementContext)
            else:
                return self.getTypedRuleContext(KonturParser.StatementContext,i)


        def getRuleIndex(self):
            return KonturParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)




    def program(self):

        localctx = KonturParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 71
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 2449281997638467646) != 0):
                self.state = 68
                self.statement()
                self.state = 73
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 74
            self.match(KonturParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def assignment(self):
            return self.getTypedRuleContext(KonturParser.AssignmentContext,0)


        def SEMICOLON(self):
            return self.getToken(KonturParser.SEMICOLON, 0)

        def reassignment(self):
            return self.getTypedRuleContext(KonturParser.ReassignmentContext,0)


        def funcDecl(self):
            return self.getTypedRuleContext(KonturParser.FuncDeclContext,0)


        def plotDecl(self):
            return self.getTypedRuleContext(KonturParser.PlotDeclContext,0)


        def returnDecl(self):
            return self.getTypedRuleContext(KonturParser.ReturnDeclContext,0)


        def loopStatement(self):
            return self.getTypedRuleContext(KonturParser.LoopStatementContext,0)


        def displayDecl(self):
            return self.getTypedRuleContext(KonturParser.DisplayDeclContext,0)


        def ifStatement(self):
            return self.getTypedRuleContext(KonturParser.IfStatementContext,0)


        def operation(self):
            return self.getTypedRuleContext(KonturParser.OperationContext,0)


        def getRuleIndex(self):
            return KonturParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)




    def statement(self):

        localctx = KonturParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_statement)
        try:
            self.state = 91
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 76
                self.assignment()
                self.state = 77
                self.match(KonturParser.SEMICOLON)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 79
                self.reassignment()
                self.state = 80
                self.match(KonturParser.SEMICOLON)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 82
                self.funcDecl()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 83
                self.plotDecl()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 84
                self.returnDecl()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 85
                self.loopStatement()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 86
                self.displayDecl()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 87
                self.ifStatement()
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 88
                self.operation()
                self.state = 89
                self.match(KonturParser.SEMICOLON)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LoopStatementsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def assignment(self):
            return self.getTypedRuleContext(KonturParser.AssignmentContext,0)


        def SEMICOLON(self):
            return self.getToken(KonturParser.SEMICOLON, 0)

        def reassignment(self):
            return self.getTypedRuleContext(KonturParser.ReassignmentContext,0)


        def operation(self):
            return self.getTypedRuleContext(KonturParser.OperationContext,0)


        def funcDecl(self):
            return self.getTypedRuleContext(KonturParser.FuncDeclContext,0)


        def plotDecl(self):
            return self.getTypedRuleContext(KonturParser.PlotDeclContext,0)


        def returnDecl(self):
            return self.getTypedRuleContext(KonturParser.ReturnDeclContext,0)


        def loopStatement(self):
            return self.getTypedRuleContext(KonturParser.LoopStatementContext,0)


        def displayDecl(self):
            return self.getTypedRuleContext(KonturParser.DisplayDeclContext,0)


        def loopIfStatement(self):
            return self.getTypedRuleContext(KonturParser.LoopIfStatementContext,0)


        def BREAK_INSTR(self):
            return self.getToken(KonturParser.BREAK_INSTR, 0)

        def CONTINUE_INSTR(self):
            return self.getToken(KonturParser.CONTINUE_INSTR, 0)

        def getRuleIndex(self):
            return KonturParser.RULE_loopStatements

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLoopStatements" ):
                listener.enterLoopStatements(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLoopStatements" ):
                listener.exitLoopStatements(self)




    def loopStatements(self):

        localctx = KonturParser.LoopStatementsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_loopStatements)
        try:
            self.state = 112
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 93
                self.assignment()
                self.state = 94
                self.match(KonturParser.SEMICOLON)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 96
                self.reassignment()
                self.state = 97
                self.match(KonturParser.SEMICOLON)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 99
                self.operation()
                self.state = 100
                self.match(KonturParser.SEMICOLON)
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 102
                self.funcDecl()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 103
                self.plotDecl()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 104
                self.returnDecl()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 105
                self.loopStatement()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 106
                self.displayDecl()
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 107
                self.loopIfStatement()
                pass

            elif la_ == 10:
                self.enterOuterAlt(localctx, 10)
                self.state = 108
                self.match(KonturParser.BREAK_INSTR)
                self.state = 109
                self.match(KonturParser.SEMICOLON)
                pass

            elif la_ == 11:
                self.enterOuterAlt(localctx, 11)
                self.state = 110
                self.match(KonturParser.CONTINUE_INSTR)
                self.state = 111
                self.match(KonturParser.SEMICOLON)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LEFT_BRACE(self):
            return self.getToken(KonturParser.LEFT_BRACE, 0)

        def RIGHT_BRACE(self):
            return self.getToken(KonturParser.RIGHT_BRACE, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(KonturParser.StatementContext)
            else:
                return self.getTypedRuleContext(KonturParser.StatementContext,i)


        def getRuleIndex(self):
            return KonturParser.RULE_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlock" ):
                listener.enterBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlock" ):
                listener.exitBlock(self)




    def block(self):

        localctx = KonturParser.BlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_block)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 114
            self.match(KonturParser.LEFT_BRACE)
            self.state = 118
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 2449281997638467646) != 0):
                self.state = 115
                self.statement()
                self.state = 120
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 121
            self.match(KonturParser.RIGHT_BRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignmentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(KonturParser.IDENTIFIER, 0)

        def typeName(self):
            return self.getTypedRuleContext(KonturParser.TypeNameContext,0)


        def ASSIGN(self):
            return self.getToken(KonturParser.ASSIGN, 0)

        def expression(self):
            return self.getTypedRuleContext(KonturParser.ExpressionContext,0)


        def getRuleIndex(self):
            return KonturParser.RULE_assignment

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssignment" ):
                listener.enterAssignment(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssignment" ):
                listener.exitAssignment(self)




    def assignment(self):

        localctx = KonturParser.AssignmentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_assignment)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 124
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 62) != 0):
                self.state = 123
                self.typeName()


            self.state = 126
            self.match(KonturParser.IDENTIFIER)
            self.state = 129
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==9:
                self.state = 127
                self.match(KonturParser.ASSIGN)
                self.state = 128
                self.expression()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def numExpression(self):
            return self.getTypedRuleContext(KonturParser.NumExpressionContext,0)


        def matrixExpression(self):
            return self.getTypedRuleContext(KonturParser.MatrixExpressionContext,0)


        def stringExpression(self):
            return self.getTypedRuleContext(KonturParser.StringExpressionContext,0)


        def boolExpression(self):
            return self.getTypedRuleContext(KonturParser.BoolExpressionContext,0)


        def NOT(self):
            return self.getToken(KonturParser.NOT, 0)

        def funcCall(self):
            return self.getTypedRuleContext(KonturParser.FuncCallContext,0)


        def indexedVar(self):
            return self.getTypedRuleContext(KonturParser.IndexedVarContext,0)


        def IDENTIFIER(self):
            return self.getToken(KonturParser.IDENTIFIER, 0)

        def NUMBER(self):
            return self.getToken(KonturParser.NUMBER, 0)

        def STRING(self):
            return self.getToken(KonturParser.STRING, 0)

        def getRuleIndex(self):
            return KonturParser.RULE_expression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpression" ):
                listener.enterExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpression" ):
                listener.exitExpression(self)




    def expression(self):

        localctx = KonturParser.ExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_expression)
        try:
            self.state = 143
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 131
                self.numExpression(0)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 132
                self.matrixExpression()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 133
                self.stringExpression()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 135
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
                if la_ == 1:
                    self.state = 134
                    self.match(KonturParser.NOT)


                self.state = 137
                self.boolExpression(0)
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 138
                self.funcCall()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 139
                self.indexedVar()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 140
                self.match(KonturParser.IDENTIFIER)
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 141
                self.match(KonturParser.NUMBER)
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 142
                self.match(KonturParser.STRING)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IndexedVarContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(KonturParser.IDENTIFIER, 0)

        def LEFT_BRACKET(self):
            return self.getToken(KonturParser.LEFT_BRACKET, 0)

        def indexList(self):
            return self.getTypedRuleContext(KonturParser.IndexListContext,0)


        def RIGHT_BRACKET(self):
            return self.getToken(KonturParser.RIGHT_BRACKET, 0)

        def getRuleIndex(self):
            return KonturParser.RULE_indexedVar

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIndexedVar" ):
                listener.enterIndexedVar(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIndexedVar" ):
                listener.exitIndexedVar(self)




    def indexedVar(self):

        localctx = KonturParser.IndexedVarContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_indexedVar)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 145
            self.match(KonturParser.IDENTIFIER)
            self.state = 146
            self.match(KonturParser.LEFT_BRACKET)
            self.state = 147
            self.indexList()
            self.state = 148
            self.match(KonturParser.RIGHT_BRACKET)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IndexListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(KonturParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(KonturParser.ExpressionContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(KonturParser.COMMA)
            else:
                return self.getToken(KonturParser.COMMA, i)

        def getRuleIndex(self):
            return KonturParser.RULE_indexList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIndexList" ):
                listener.enterIndexList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIndexList" ):
                listener.exitIndexList(self)




    def indexList(self):

        localctx = KonturParser.IndexListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_indexList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 150
            self.expression()
            self.state = 155
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==39:
                self.state = 151
                self.match(KonturParser.COMMA)
                self.state = 152
                self.expression()
                self.state = 157
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MatrixExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def matrixAtom(self):
            return self.getTypedRuleContext(KonturParser.MatrixAtomContext,0)


        def INVERT_MATRIX(self):
            return self.getToken(KonturParser.INVERT_MATRIX, 0)

        def TRANSPOSITION(self):
            return self.getToken(KonturParser.TRANSPOSITION, 0)

        def getRuleIndex(self):
            return KonturParser.RULE_matrixExpression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMatrixExpression" ):
                listener.enterMatrixExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMatrixExpression" ):
                listener.exitMatrixExpression(self)




    def matrixExpression(self):

        localctx = KonturParser.MatrixExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_matrixExpression)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 159
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==16:
                self.state = 158
                self.match(KonturParser.INVERT_MATRIX)


            self.state = 161
            self.matrixAtom()
            self.state = 163
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,10,self._ctx)
            if la_ == 1:
                self.state = 162
                self.match(KonturParser.TRANSPOSITION)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MatrixAtomContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
